--- a/css/ssmemodocs.css
+++ b/css/ssmemodocs.css
@@ -6,7 +6,7 @@ body {
 
 /*  div = editor
     맨 바깥 div */
-#editor {
+#editor-container {
     height: 100%;
     width: 100%;
 }
@@ -16,6 +16,7 @@ body {
     height: 5%;
     width: 100%;
     position: relative;
+    border-bottom: 1px solid #d9d9d9;;
 }
 
 /*  슬라이드 table */
@@ -45,18 +46,16 @@ td {
 }
 
 /*  td filmstrip 슬라이드 미리보기 */
-td#filmstrip {
-    width: 219px;
+td.filmstrip {
     vertical-align: top;
     position: relative;
     white-space: nowrap;
+    border-right: 1px solid #d9d9d9;
 }
 
 /*  td filmstrip 안의 svg 를 감싸는 div */
-div.filmstrip {
-    width: 219px;
-    height: 888px;
-    border-right: 1px solid #d9d9d9;
+div#filmstrip {
+    height: 100%;
     display: inline-block;
     overflow-x: hidden;
     overflow-y: auto;
@@ -66,8 +65,16 @@ div.filmstrip {
 }
 
 /*  슬라이드 본문 */
-#canvas-view {
+td#canvas-view {
+    vertical-align: top;
     position: relative;
     overflow: hidden;
     height: 100%;
+}
+
+#editor {
+    margin: 1%;
+    position: absolute;
+    overflow: hidden;
+    border: 1px solid #000000;
 }
